--- a/apps/pp-ambulance-ufe/webcomponent-content.yaml
+++ b/apps/pp-ambulance-ufe/webcomponent-content.yaml
@@ -6,6 +6,10 @@ spec:
   microFrontend: pp-ambulance-ufe
   element: pp-ambulance-wl-app
   attributes:
+    - name: api-base
+      value: http://localhost:5000/api
+    - name: ambulance-id
+      value: bobulova
     - name: base-path
       value: /pp-ambulance-wl/
   displayRules:
