--- a/components/version-developers/kustomization.yaml
+++ b/components/version-developers/kustomization.yaml
@@ -1,6 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 images:
+- name: pprizbul/ambulance-wl-webapi
+  newName: pprizbul/ambulance-wl-webapi # {"$imagepolicy":  "wac-hospital:ambulance-webapi:name"}
+  newTag: main # {"$imagepolicy": "wac-hospital:ambulance-webapi:tag"}
+  
 - name: pprizbul/ambulance-ufe
   newName: pprizbul/ambulance-ufe # {"$imagepolicy":  "wac-hospital:ambulance-ufe:name"}
   newTag: master.20250318.1429 # {"$imagepolicy": "wac-hospital:ambulance-ufe:tag"}
