--- a/apps/pp-ambulance-ufe/webcomponent-content.yaml
+++ b/apps/pp-ambulance-ufe/webcomponent-content.yaml
@@ -7,7 +7,7 @@ spec:
   element: pp-ambulance-wl-app
   attributes:
     - name: api-base
-      value: http://localhost:30081/api
+      value: /pp-api
     - name: ambulance-id
       value: bobulova
     - name: base-path
