--- a/clusters/localhost/secrets/kustomization.yaml
+++ b/clusters/localhost/secrets/kustomization.yaml
@@ -20,3 +20,9 @@ secretGenerator:
       - params/mongodb-auth.env
     options:
      disableNameSuffixHash: true
+  - name: oidc-client
+    type: Opaque
+    envs:
+      - params/oidc-client.env
+    options:
+        disableNameSuffixHash: true
